--- a/static/slides/sept12.html
+++ b/static/slides/sept12.html
@@ -226,6 +226,8 @@ Does this have to be written? Could it take other formats?
 hartman - stories to fill the gaps, but stories that emphasize how the gaps can&#39;t be filled
 -makes me think of unpleasant enchantment, and the uncanny ruptures of the past into the present</p>
 </aside></script></section><section  data-markdown><script type="text/template">
+<!-- .slide: data-background-opacity="0.5" data-background-image="bluebricks.png" -->
+
 Critical Fabulation /2
 
 <small>
@@ -266,9 +268,9 @@ What worked about the Last American Pirate
 - &shy;<!-- .element: class="fragment" data-fragment-index="3" -->trusting ecosystem: it looked like history, it felt like history
 </script></section><section  data-markdown><script type="text/template">
 <split even>
-<p style="line-height: 0" class="reset-paragraph image-paragraph"><img src="slides/historically-accurate.webp" alt="" ></img></p>
+<p style="line-height: 0" class="reset-paragraph image-paragraph"><img src="historically-accurate.webp" alt="" ></img></p>
 
-<p style="line-height: 0" class="reset-paragraph image-paragraph"><img src="slides/craiyon_153557_An_authentic_historical_video_game_br_.png" alt="" ></img></p>
+<p style="line-height: 0" class="reset-paragraph image-paragraph"><img src="craiyon_153557_An_authentic_historical_video_game_br_.png" alt="" ></img></p>
 
 </split>
 
