--- a/static/slides/sept28.html
+++ b/static/slides/sept28.html
@@ -163,7 +163,7 @@ And it depends probably on your theory of learning.
 </script></section><section  data-markdown><script type="text/template">
 Chris Crawford on play
 
-<p style="line-height: 0" class="reset-paragraph image-paragraph"><img src="slides/Sept 26 Storytelling in games 2022-08-24 13.51.03.excalidraw.png|.png" alt="" ></img></p>
+<p style="line-height: 0" class="reset-paragraph image-paragraph"><img src="slides/fig1.png" alt="" ></img></p>
 
 
 <aside class="notes"><p>in this scheme - games are rule based systems where the goal is for one player to win. mechanics can be the same as puzzles. replay value high
