--- a/static/slides/sept28.html
+++ b/static/slides/sept28.html
@@ -200,7 +200,7 @@ Mechanics - Dynamics - Aesthetics
 
 <aside class="notes"><p>2004, Robin Hunicke, Marc LeBlanc, Robert Zubek. Problems with this perspective?</p>
 </aside></script></section><section  data-markdown><script type="text/template">
-<p style="line-height: 0" class="reset-paragraph image-paragraph"><img src="slides/Sept 26 Storytelling in games 2022-08-24 13.45.02.excalidraw.png|.png" alt="" ></img></p>
+<p style="line-height: 0" class="reset-paragraph image-paragraph"><img src="slides/fig2.png" alt="" ></img></p>
 
 </script></section><section  data-markdown><script type="text/template">
 Time in games
