--- a/static/slides/sept28.html
+++ b/static/slides/sept28.html
@@ -200,6 +200,9 @@ Mechanics - Dynamics - Aesthetics
 
 <aside class="notes"><p>2004, Robin Hunicke, Marc LeBlanc, Robert Zubek. Problems with this perspective?</p>
 </aside></script></section><section  data-markdown><script type="text/template">
+
+...my view...
+
 <p style="line-height: 0" class="reset-paragraph image-paragraph"><img src="slides/fig2.png" alt="" ></img></p>
 
 </script></section><section  data-markdown><script type="text/template">
