--- a/static/slides/nov21.html
+++ b/static/slides/nov21.html
@@ -1,10 +1,7 @@
 <!DOCTYPE html>
 <html lang=""><head>
-<<<<<<< HEAD
-<meta http-equiv="content-type" content="text/html; charset=UTF-8"><meta charset="utf-8"><meta http-equiv="X-UA-Compatible" content="IE=edge"><meta name="viewport" content="width=device-width,initial-scale=1"><link rel="icon" href="https://intrigue-app.github.io/favicon.ico"><title>intrigue</title><script defer="defer" src="https://intrigue-app.github.io/nov21_files/chunk-vendors.966cb890.js"></script><script defer="defer" src="nov21_files/app.bdb5736c.js"></script><link href="nov21_files/chunk-vendors.5dee0538.css" rel="stylesheet"><link href="nov21_files/app.623d5fe7.css" rel="stylesheet"><style type="text/css" data-styled-id="rCS1rb3a7w">.rCS1rb3a7w {
-=======
-<meta http-equiv="content-type" content="text/html; charset=UTF-8"><meta charset="utf-8"><meta http-equiv="X-UA-Compatible" content="IE=edge"><meta name="viewport" content="width=device-width,initial-scale=1"><link rel="icon" href="https://intrigue-app.github.io/favicon.ico"><title>intrigue</title><script defer="defer" src="/js/chunk-vendors.966cb890.js"></script><script defer="defer" src="https://intrigue-app.github.io/js/app.bdb5736c.js"></script><link href="https://intrigue-app.github.io/css/chunk-vendors.5dee0538.css" rel="stylesheet"><link href="https://intrigue-app.github.io/css/app.623d5fe7.css" rel="stylesheet"><style type="text/css" data-styled-id="rCS1rb3a7w">.rCS1rb3a7w {
->>>>>>> 668c2ec (phew)
+<meta http-equiv="content-type" content="text/html; charset=UTF-8"><meta charset="utf-8"><meta http-equiv="X-UA-Compatible" content="IE=edge"><meta name="viewport" content="width=device-width,initial-scale=1"><link rel="icon" href="https://intrigue-app.github.io/favicon.ico"><title>intrigue</title><script defer="defer" src="/js/chunk-vendors.966cb890.js"></script><script defer="defer" src="https://intrigue-app.github.io/js/app.bdb5736c.js"></script><link href="https://intrigue-app.github.io/css/chunk-vendors.5dee0538.css" rel="stylesheet"><link href="https://intrigue-app.github.io/css/app.623d5fe7.css" rel="stylesheet"><style type="text/css" data-styled-id="rCS1rb3a7w">.rCS1rb3a7w 
+    {
 	position: absolute;
 	width: 1px;
 	height: 1px;
