--- a/static/slides/nov28/index.html
+++ b/static/slides/nov28/index.html
@@ -4,7 +4,7 @@
         <title>Keynote</title>
         <meta name="viewport" content="initial-scale = 1.0, minimum-scale = 1.0, maximum-scale = 1.0, user-scalable = no, width = device-width" />
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-        <link rel="stylesheet" type="text/css" href="https://hist3812.netlify.app/slides/nov28/assets/player/styles.css">
+        <link rel="stylesheet" type="text/css" href="assets/player/styles.css">
     </head>
     <body id="body" bgcolor="black">
         <div id="stageArea">
@@ -25,9 +25,9 @@
             <div id="waitingSpinner">
             </div>
         </div>
-        <script type="text/javascript" src="https://hist3812.netlify.app/slides/nov28/assets/player/pdfjs/bcmaps.js"></script></body>
-        <script type="text/javascript" src="https://hist3812.netlify.app/slides/nov28/assets/player/pdfjs/web/compatibility.js"></script></body>
-        <script type="text/javascript" src="https://hist3812.netlify.app/slides/nov28/assets/player/pdfjs/pdf.js"></script></body>
-        <script type="text/javascript" src="https://hist3812.netlify.app/slides/nov28/assets/player/main.js"></script></body>
+        <script type="text/javascript" src="assets/player/pdfjs/bcmaps.js"></script></body>
+        <script type="text/javascript" src="assets/player/pdfjs/web/compatibility.js"></script></body>
+        <script type="text/javascript" src="assets/player/pdfjs/pdf.js"></script></body>
+        <script type="text/javascript" src="assets/player/main.js"></script></body>
     </body>
 </html>
